--- a/WebContent/Css/add_prod.css
+++ b/WebContent/Css/add_prod.css
@@ -1,6 +1,10 @@
+body,html {
+	height: 100%;
+}
+
 #product_type {
 	margin: 0 auto;
-	margin-top: 50px;
+	//margin-top: 50px;
 	text-align: center;
 	letter-spacing: 2px;
 	color: gray;
@@ -11,20 +15,24 @@
 	height: 30px;
 }
 
+#prod_div {
+	float: left;
+	width: 60%;
+	margin-left: 20px;
+	//border: 1px solid black;
+}
+
 #prod_list {
 	background-color: white;
-	width: 90%;
+	width: 100%;
 	display: block;
-	margin: 0 auto;
-	border: 1px solid gray;
-	box-shadow: 0px 0px 10px gray;
+	border: 1px solid #c2c2a3;
 	border-radius: 5px;
 	padding: 10px;
 	margin-top: 20px;
 }
 
-
-ul {
+#prod_info_ul {
 	list-style-type: none;
 	padding: 0;
 }
@@ -45,4 +53,22 @@ input[type=text] {
 	margin-top: 5px;
 	padding: 5px;
 	border-radius: 5px;
+	font-size: 12px;
+}
+
+#summary_div {
+	display: none;
+	width: 30%;
+  	right: 10px;
+	border: 1px solid #c2c2a3;
+	border-radius: 5px;
+	float: left;
+	margin-left: 40px;
+	margin-top: 20px;
+	position: sticky;
+  	top: 0;
+}
+
+#summary_div h3 {
+	text-align: center;
 }
